# Inmersive_Checkers

./: CMakeLists.txt  CheckerGame.cpp  main.cpp
src/: AI.cpp  AI.hpp  CheckerGame.cpp  CheckerGame.hpp  Checkerboard.cpp  Checkerboard.hpp  Checkerpiece.cpp  Checkerpiece.hpp  Checkers.cpp  Checkers.hpp  Global.hpp  Main.cpp  Moveable.cpp  Moveable.hpp  Player.cpp  Player.hpp  Square.cpp  Square.hpp  main.cpp
